fix footer on mobile

--- a/stylesheet_home.css
+++ b/stylesheet_home.css
@@ -219,11 +219,11 @@ span {
 	}
 		
 	.content {
-	margin-top: 140px;
+	margin-top: 150px;
 	}
 	
 	.image_iconcontainer {
-	width: 100%;
+	width: 90%;
 	height: auto;
 	}
 
